# httpxy

./: .gitignore  .pre-commit-config.yaml  README.md  httpy.py  pyproject.toml  requirements.txt
tests/: __init__.py  conftest.py  data.py  test_response.py  test_yaml_api.py
